# macro-forescasts

./: .gitignore  .pre-commit-config.yaml  README.md  data-extraction.ipynb  docker-compose.yaml  fred.ipynb  hello.py  pyproject.toml  series.json  utilities.py
.dvc/: config
.github/workflows/: ci.yml
src/: data.dvc  extraction.ipynb  extraction.py  fred_metadata.py  selection.ipynb  selection.py  series.json  utilities.py
src/data/: raw.csv  raw.csv.dvc
src/static/fred/: frequencies.json  series.json  units.json
tests/: test_extraction.py
variables/: fred.html
